# flowrite

./: .gitignore  .prettierignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: system-prompt.md
src-tauri/resources/docs/: faq.md  getting-started.md  index.md  troubleshooting.md
src-tauri/resources/docs/guides/: comments-and-collaboration.md  editing-markdown.md  managing-files.md  working-with-ai-agents.md  workspace-and-layout.md
src-tauri/resources/docs/reference/: agent-configuration.md  keyboard-shortcuts.md  versioning-and-metadata.md
src-tauri/src/: acp.rs  command.rs  constants.rs  file_watcher.rs  lib.rs  main.rs  nb.rs  utils.rs
src/components/editor/: transforms.ts
src/components/ui/: ask-ai-toolbar-button.tsx  block-discussion.tsx  block-list-static.tsx  block-list.tsx  block-suggestion.tsx  blockquote-node.tsx  button.tsx  calendar.tsx  chat-container.tsx  checkbox.tsx  code-block-node-static.tsx  code-block-node.tsx  code-node-static.tsx  code-node.tsx  command.tsx  comment-node-static.tsx  comment-node.tsx  comment-toolbar-button.tsx  comment.tsx  date-node-static.tsx  date-node.tsx  dialog.tsx  diff-leaf.tsx  drawer.tsx  dropdown-menu.tsx  editor-static.tsx  editor.tsx  (+43 more)
src/hooks/: use-debounce.ts
src/lib/: constants.ts  match-quote.ts  tool-call-label.ts  types.ts  utils.ts
src/store/: agent-store.ts  app-store.ts  diff-store.ts  workspace-store.ts
(+48 files in other folders)
