[package]
name = "flowrite"
version = "0.1.0"
description = "a markdown editor, reimagined for the age of ai agents"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flowrite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["fs", "time", "sync"] }
chrono = "0.4"
once_cell = "1.19"
objc = "0.2"
cocoa = "0.26"
notify = "7"
trash = "5.2.5"

[features]
cargo-clippy = []
